Closed Bug 398174 Opened 17 years ago Closed 17 years ago

browser.download.manager.addToRecentDocs is not set by default

Categories

(Toolkit :: Downloads API, defect, P3)

x86
Windows Vista
defect

Tracking

()

VERIFIED FIXED
mozilla1.9beta1

People

(Reporter: sdwilsh, Assigned: Gavin)

Details

Attachments

(1 file)

We want this to be set to true by default as per conversation with mconnor.

requesting wanted-fx3
Flags: blocking-firefox3?
For QA's benefit--meaning me, currently--please describe what this pref is, and how to test it; thanks!
It will add the download to the "recent documents" thing in windows
Flags: blocking-firefox3? → blocking-firefox3-
Whiteboard: [wanted-firefox3]
Actually, now that I actually look at the code... we default "addToRecentDocs" to true, so the pref is only there to optionally disable the feature. I suppose we should add it to firefox.js, but that probably makes this un-wanted-firefox3.
Assignee: nobody → gavin.sharp
Status: NEW → ASSIGNED
Attachment #283355 - Flags: review?(mconnor)
Priority: -- → P3
Target Milestone: --- → Firefox 3 M9
Comment on attachment 283355 [details] [diff] [review]
add default pref, comment

heh, well, if its actually enabled... :)  we still want this I think.
Attachment #283355 - Flags: review?(mconnor)
Attachment #283355 - Flags: review+
Attachment #283355 - Flags: approval1.9+
mozilla/browser/app/profile/firefox.js 	1.205
mozilla/toolkit/components/downloads/src/nsDownloadManager.cpp 	1.134
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
This appears to not be working on Vista HP.  I've downloaded several files today and so far none are showing up in the 'Recent Items' list. 

Note:  Recent Items is most likely different the 'Recent Docs' used by XP.  

Yes I have the latest build, and I've checked the pref, and its set to 'true'

Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a9pre) Gecko/2007100311 Minefield/3.0a9pre Firefox/3.0 ID:2007100311
(In reply to comment #7)
> This appears to not be working on Vista HP.  I've downloaded several files
> today and so far none are showing up in the 'Recent Items' list. 

Is it possible they're all .exes? The function we call to add items to "recent documents" ignores executables.

In any case, your first step when discovering this kind of issue should be to file a new bug, instead of commenting on an existing unrelated one :) INVALID bugs are cheaper than bugs that get lost because they're only mentioned in a comment on a FIXED bug.
Thanks gavin, yes.. they were .exe's 

Will remember next time and just file a bug.  
Tested with tinderbox builds from
ftp://ftp.mozilla.org/pub/firefox/tinderbox-builds/FX-WIN32-TBOX-trunk of:

Windows XP SP 2 - Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a9pre)
Gecko/2007103017 Minefield/3.0a9pre

and Vista - Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a9pre)
Gecko/2007103017 Minefield/3.0a9pre

This works like a charm, now; in Vista, just setting the Start Menu style to
"classic" makes the fix apparent.

Verified FIXED
Status: RESOLVED → VERIFIED
Flags: wanted-firefox3+
Whiteboard: [wanted-firefox3]
Just so I don't go insane, the other bug I spun off from this was bug 401430.

https://litmus.mozilla.org/show_test.cgi?id=5148

in-litmus+
Flags: in-litmus? → in-litmus+
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: