Bug 398174: add DM 'addToRecentDocs' pref to firefox.js, and add a comment explaining it's use, r+a=mconnor